--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "axios": "^0.27.2",
+    "i18next": "^21.9.1",
+    "moment": "^2.29.4",
     "react": "17.0.2",
+    "react-i18next": "^11.18.6",
     "react-native": "0.68.0",
+    "react-native-localize": "^2.2.3",
+    "react-native-mmkv": "^2.4.3",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
