--- a/package.json
+++ b/package.json
@@ -7,44 +7,55 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.3.3",
-    "@react-navigation/native": "^6.0.12",
-    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@tanstack/react-query": "^4.3.9",
+    "add": "^2.0.6",
     "axios": "^0.27.2",
-    "i18next": "^21.9.1",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "i18next": "^21.9.2",
     "moment": "^2.29.4",
-    "react": "17.0.2",
+    "react": "18.1.0",
     "react-i18next": "^11.18.6",
-    "react-native": "0.68.0",
+    "react-native": "0.70.1",
     "react-native-localize": "^2.2.3",
-    "react-native-mmkv": "^2.4.3",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.2.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/runtime": "^7.19.0",
-    "@react-native-community/eslint-config": "^3.1.0",
-    "@types/jest": "^29.0.2",
-    "@types/react": "^18.0.20",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
-    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.0.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.23.1",
-    "jest": "^29.0.3",
-    "metro-react-native-babel-preset": "^0.72.3",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-test-renderer": "17.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.72.1",
+    "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
