--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
     "react-native-localize": "^2.2.3",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
