--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "babel-plugin-module-resolver": "^4.1.0",
+    "formik": "^2.2.9",
     "i18next": "^21.9.2",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.3",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
