--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-resizer": "^1.4.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.3",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
