--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-native-image-resizer": "^1.4.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.3",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
