--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,4 +37,8 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
-newArchEnabled=false
+# newArchEnabled=false
+# MYAPP_UPLOAD_STORE_FILE=GoJady.keystore
+# MYAPP_UPLOAD_KEY_ALIAS=GoJady
+# MYAPP_UPLOAD_STORE_PASSWORD=123456
+# MYAPP_UPLOAD_KEY_PASSWORD=123456
