--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "react-native-image-resizer": "^1.4.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.3",
-    "react-native-restart": "^0.0.24",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^4.12.4",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-timer-hook": "^3.0.5",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
