--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
     "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-fade-loading": "^1.0.1",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-resizer": "^1.4.5",
     "react-native-linear-gradient": "^2.6.2",
