--- a/ios/gojaddy/Info.plist
+++ b/ios/gojaddy/Info.plist
@@ -71,6 +71,10 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>AntDesign.ttf</string>
+		<string>almarai_bold.ttf</string>
+		<string>almarai_extraBold.ttf</string>
+		<string>almarai_light.ttf</string>
+		<string>almarai_regular.ttf</string>
 		<string>Almarai-Bold.ttf</string>
 		<string>Almarai-ExtraBold.ttf</string>
 		<string>Almarai-Light.ttf</string>
