--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
+    "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^13.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
