--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-localize": "^2.2.3",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.4",
+    "react-native-picker-select": "^8.0.4",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
