--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik": "^2.2.9",
     "i18next": "^21.9.2",
     "moment": "^2.29.4",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
@@ -38,6 +39,7 @@
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
+    "react-native-select-dropdown": "^3.0.0",
     "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^13.2.0",
     "react-native-svg-transformer": "^1.0.0",
