--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "release-android": "cd android && ./gradlew assembleRelease",
+    "clean-android": "cd android && ./gradlew clean",
     "link": "npx react-native-asset",
-    "get-packages":"yarn && npx pod-install"
+    "get-packages": "yarn && npx pod-install"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
@@ -42,7 +43,6 @@
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-select-dropdown": "^3.0.0",
-    "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^13.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
