--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.1.0",
     "react-i18next": "^11.18.6",
     "react-native": "0.70.1",
+    "react-native-bootsplash": "^4.3.3",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-fade-loading": "^1.0.1",
     "react-native-image-picker": "^4.10.0",
@@ -43,10 +44,10 @@
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-select-dropdown": "^3.0.0",
+    "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^13.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-snackbar": "^2.4.0",
     "react-timer-hook": "^3.0.5",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
