--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-timer-hook": "^3.0.5",
+    "rn-range-slider": "^2.2.2",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
