--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-svg": "^13.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.25.0",
     "react-timer-hook": "^3.0.5",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
