--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "get-packages": "yarn && npx pod-install"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/netinfo": "^9.3.1",
     "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/auth": "^16.4.6",
+    "@react-native-google-signin/google-signin": "^8.2.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -35,6 +38,7 @@
     "react-native-bootsplash": "^4.3.3",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-fade-loading": "^1.0.1",
+    "react-native-fbsdk-next": "^11.1.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-resizer": "^1.4.5",
     "react-native-linear-gradient": "^2.6.2",
