--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@react-native-community/netinfo": "^9.3.1",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
-    "@react-native-google-signin/google-signin": "^8.2.1",
     "@react-native-firebase/messaging": "^16.4.6",
+    "@react-native-google-signin/google-signin": "^8.2.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -58,6 +58,7 @@
     "react-native-webview": "^11.25.0",
     "react-timer-hook": "^3.0.5",
     "rn-range-slider": "^2.2.2",
+    "use-debounce": "^9.0.2",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
