--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@tanstack/react-query": "^4.3.9",
     "add": "^2.0.6",
-    "axios": "^0.27.2",
+    "axios": "0.24.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "formik": "^2.2.9",
     "i18next": "^21.9.2",
